--- a/SRC/templates/index.html
+++ b/SRC/templates/index.html
@@ -1,4 +1,3 @@
-{% extends 'base.html' %}
 {% block head %}
     <title>Document</title>
 {% endblock %}
@@ -7,6 +6,6 @@
 
 
 {% block body %}
-    <a href="/field_clinic" target="_blank"><button>Field clinic / Pop-upclinic</button></a>
+    <a href="/clinic" target="_blank"><button>clinic</button></a>
     <a href="hospital" target="_blank"><button>Hospital</button></a>
 {% endblock %}
